anecdoct-rs/tui/src/chatwidget/snapshots/anecdoct_tui__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Settings
  Configure settings for Anecdoct.

› 1. Microphone  Current: System default
  2. Speaker     Current: System default

  Press enter to confirm or esc to go back
